--- a/Project/Pages/ProjectDetails.xaml
+++ b/Project/Pages/ProjectDetails.xaml
@@ -8,78 +8,94 @@
       d:DesignHeight="600" d:DesignWidth="800"
       Title="Подробности проекта">
 
-    <ScrollViewer VerticalScrollBarVisibility="Auto">
-        <Grid Background="White" Margin="20">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <!-- Новая строка для кнопки -->
-            </Grid.RowDefinitions>
+    <Grid Background="#F5F5F5">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-            <Label Content="Подробности проекта"
-                   FontFamily="Verdana" FontWeight="Bold" FontSize="18"/>
+        <!-- Заголовок -->
+        <Border Grid.Row="0" Background="White" Padding="10">
+            <TextBlock Foreground="#FFA6A6A6" FontFamily="Verdana">
+                <Run Language="ru-ru" Text="Подробности проекта"/>
+            </TextBlock>
+        </Border>
 
-            <Grid Grid.Row="2">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="10"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="150"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Label Content="Наименование:" VerticalAlignment="Center" FontFamily="Verdana" FontWeight="Bold"/>
-                    <TextBlock x:Name="txtProjectName" Grid.Column="1" Text="" FontFamily="Verdana"/>
+        <!-- Основной контент -->
+        <Border Grid.Row="1" Background="White" Margin="10" CornerRadius="5">
+            <ScrollViewer VerticalScrollBarVisibility="Auto">
+                <Grid Margin="10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <!-- Наименование -->
+                    <Grid Grid.Row="0" Margin="0,0,0,10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="150"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Column="0" Text="Наименование" Margin="10,0,10,0" VerticalAlignment="Center" Height="16" FontFamily="Verdana"/>
+                        <TextBlock x:Name="txtProjectName" Grid.Column="1" Text="" Margin="10,0,10,0" VerticalAlignment="Center" Height="16" FontFamily="Verdana"/>
+                    </Grid>
+
+                    <!-- Описание -->
+                    <Grid Grid.Row="1" Margin="0,0,0,10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="150"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Column="0" Text="Описание" Margin="10,0,10,0" VerticalAlignment="Center" Height="16" FontFamily="Verdana"/>
+                        <TextBlock x:Name="txtProjectDescription" Grid.Column="1" Text="" Margin="10,0,10,0" VerticalAlignment="Center" Height="62" FontFamily="Verdana" TextWrapping="Wrap"/>
+                    </Grid>
+
+                    <!-- Публичность -->
+                    <Grid Grid.Row="2" Margin="0,0,0,10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="150"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Column="0" Text="Публичность" Margin="10,0,10,0" VerticalAlignment="Center" Height="16" FontFamily="Verdana"/>
+                        <TextBlock x:Name="txtPublicity" Grid.Column="1" Text="" Margin="10,0,10,0" VerticalAlignment="Center" Height="16" FontFamily="Verdana"/>
+                    </Grid>
+
+                    <!-- Участники -->
+                    <Grid Grid.Row="3" Margin="0,0,0,10">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="150"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Row="0" Grid.Column="0" Text="Участники" Margin="10,0,10,0" VerticalAlignment="Center" Height="16" FontFamily="Verdana"/>
+                        <ListView x:Name="listViewParticipants" Grid.Row="1" Grid.Column="1" Margin="10,5,10,0" FontFamily="Verdana" BorderThickness="0">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="Auto"/>
+                                        </Grid.ColumnDefinitions>
+                                        <TextBlock Text="{Binding Name}" FontFamily="Verdana"/>
+                                        <TextBlock Grid.Column="1" Text="{Binding Role}" FontFamily="Verdana" Margin="10,0,0,0"/>
+                                    </Grid>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </Grid>
+
+                    <!-- Кнопка Закрыть -->
+                    <Button Grid.Row="5" Grid.Column="1" Content="Закрыть" Margin="0,20,10,10" Padding="10,5" HorizontalAlignment="Right"
+                            Background="#FF000083" Foreground="White" Click="BackButton_Click" Width="120" Height="30" BorderBrush="#FF000083" FontFamily="Verdana"/>
                 </Grid>
-                <Grid Grid.Row="2">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="150"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Label Content="Описание:" VerticalAlignment="Center" FontFamily="Verdana" FontWeight="Bold"/>
-                    <TextBlock x:Name="txtProjectDescription" Grid.Column="1" Text="" FontFamily="Verdana" TextWrapping="Wrap"/>
-                </Grid>
-            </Grid>
-
-            <Grid Grid.Row="4">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="150"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Label Content="Публичность:" VerticalAlignment="Center" FontFamily="Verdana" FontWeight="Bold"/>
-                <TextBlock x:Name="txtPublicity" Grid.Column="1" Text="" FontFamily="Verdana"/>
-            </Grid>
-
-            <StackPanel Grid.Row="6" Margin="0,0,0,10">
-                <Label Content="Участники проекта"
-                       FontFamily="Verdana" FontWeight="Bold" FontSize="14"/>
-                <ListView x:Name="listViewParticipants" Margin="0,10,0,0" Height="101" FontFamily="Verdana">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="Auto"/>
-                                </Grid.ColumnDefinitions>
-                                <Label Content="{Binding Name}" FontFamily="Verdana"/>
-                                <Label Grid.Column="1" Content="{Binding Role}" FontFamily="Verdana" Margin="10,0,0,0"/>
-                            </Grid>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </StackPanel>
-
-            <Button Grid.Row="7" Content="Назад" Height="32" Width="150"
-                    Click="BackButton_Click" HorizontalAlignment="Right" Background="#FF000083" 
-                    BorderBrush="#FF000083" Foreground="White" FontFamily="Verdana"/>
-        </Grid>
-    </ScrollViewer>
+            </ScrollViewer>
+        </Border>
+    </Grid>
 </Page>
